Image Resize mapping and fix coordinates
- Implemented the image resizing mapper to allow for the clickable
containers to move with the items they are attached to
- Move coordinates for sample profile to cover the item and the prompt
- Tested on mobile and desktop

--- a/css/main.css
+++ b/css/main.css
@@ -133,4 +133,11 @@ p.item {
     width: 100%;
     margin-bottom: 150px;
   }
+  .modal-image {
+    width: 80%;
+    margin: 5px 10%;
+  }
+  .modal-content {
+    width: 100%;
+  }
 }
